--- a/styles/style.css
+++ b/styles/style.css
@@ -319,7 +319,7 @@ body {
 }
 
 /*==========================================
-         Pagina de Locacion inicio
+         Pagina de Localizacion inicio
 ===========================================*/
 .locationContainer {
   position: absolute;
@@ -362,6 +362,6 @@ body {
 }
 
 /*==========================================
-         Pagina de Locacion fin
+         Pagina de Localizacion fin
 ===========================================*/
 /*# sourceMappingURL=style.css.map */
