--- a/styles/style.scss
+++ b/styles/style.scss
@@ -234,7 +234,7 @@ body {
 
 
 /*==========================================
-         Pagina de Locacion inicio
+         Pagina de Localizacion inicio
 ===========================================*/
 
 .locationContainer {
@@ -268,5 +268,5 @@ body {
 
 
 /*==========================================
-         Pagina de Locacion fin
+         Pagina de Localizacion fin
 ===========================================*/
